--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -8,44 +8,44 @@
 theme: minimal
 day_night: true
 font: ''
-font_size: L
+font_size: M
 
 # SEO
 
 site_type: Person
-local_business_type: ''
-org_name: ''
+local_business_type: 'Computer Science Researcher'
+org_name: 'University of Innsbruck'
 description: ''
-twitter: ''
+twitter: 'ask4jubad'
 
 # Contact (edit or remove options as required)
 
-email: test@example.org
-phone: 888 888 88 88
+email: jubril.adigun[at]uibk.at
+workphone: +4351250753456
 address:
-  street: 450 Serra Mall
-  city: Stanford
-  region: CA
-  postcode: '94305'
-  country: United States
-  country_code: US
-coordinates:
-  latitude: '37.4275'
-  longitude: '-122.1697'
-directions: Enter Building 1 and take the stairs to Office 200 on Floor 2
-office_hours:
-  - 'Monday 10:00 to 13:00'
-  - 'Wednesday 09:00 to 10:00'
+  street: Technikerstrasse 21a
+  city: Innsbruck
+  region: Tirol
+  postcode: '6020'
+  country: Austria
+  country_code: AT
+# coordinates:
+#   latitude: '37.4275'
+#   longitude: '-122.1697'
+directions: Room 2W04
+# office_hours:
+#   - 'Monday 10:00 to 13:00'
+#   - 'Wednesday 09:00 to 10:00'
 appointment_url: 'https://calendly.com'
 contact_links:
   - icon: twitter
     icon_pack: fab
     name: DM Me
-    link: 'https://twitter.com/Twitter'
+    link: 'https://twitter.com/ask4jubad'
   - icon: skype
     icon_pack: fab
     name: Skype Me
-    link: 'skype:echo123?call'
+    link: 'skype:ask4jubad'
   - icon: keybase
     icon_pack: fab
     name: Chat on Keybase
@@ -61,7 +61,7 @@ main_menu:
   enable: true
   align: l
   show_logo: true
-  show_language: false
+  show_language: true
   show_day_night: true
   show_search: true
   highlight_active_link: true
@@ -77,8 +77,8 @@ address_format: en-us
 highlight: true
 highlight_languages:
   - r
-math: false
-diagram: false
+math: true
+diagram: true
 privacy_pack: false
 edit_page:
   repo_url: ''
