--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -104,11 +104,11 @@ section_pager: false
 docs_section_pager: true
 sharing: true
 copyright_license:
-  enable: false
+  enable: true
   allow_derivatives: false
   share_alike: true
   allow_commercial: false
-  notice: 'This work is licensed under {license}'
+  notice: '&copy 2022 Ask4jubad'
 abstract_length: 250
 plugins_js: []
 avatar:
