--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -16,6 +16,20 @@ main:
 #   - name: Talks
 #     url: '#talks'
 #     weight: 40
+  - name: Teaching
+    identifier: teaching 
+    weight: 40
+  - name: Courses
+    identifier: courses
+    url: './courses/'
+    parent: teaching
+    weight: 30
+  - name: supervision
+    parent: teaching
+    url: './supervision/'
+    weight: 31
+  - name: Research Projects
+    PageRef: research/official-projects/_index.md
   - name: Publications
     url: '#publications'
     weight: 50
@@ -25,6 +39,6 @@ main:
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
- - name: CV
-   url: uploads/resume.pdf
-   weight: 70
+#  - name: CV
+#    url: uploads/resume.pdf
+#    weight: 70
