--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -22,6 +22,7 @@ main:
   - name: Courses
     identifier: courses
     url: './courses/'
+    PageRef: teaching/courses/index.md
     parent: teaching
     weight: 30
   - name: Supervision
