--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -23,14 +23,14 @@ main:
   - name: Courses
     identifier: courses
     url: './courses/'
-    PageRef: teaching/courses/
+    PageRef: teaching/courses/_index.md
     parent: teaching
     weight: 30
   - name: Supervision
     identifier: supervision
     url: './supervision/'
     parent: teaching
-    PageRef: teaching/supervision/
+    PageRef: teaching/supervision/_index.md
     weight: 31
   - name: Publications
     url: '#publications'
