--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -4,11 +4,16 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 # Appearance
+appearance:
+  theme_day: minimal
+  theme_night: minimal
+  font: minimal
+  font_size: M
 
-theme: minimal
-day_night: true
-font: minimal
-font_size: M
+# theme: minimal
+# day_night: true
+# font: minimal
+# font_size: M
 
 # SEO
 
