--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -25,8 +25,8 @@ twitter: 'ask4jubad'
 
 # Contact (edit or remove options as required)
 
-email: jubril.adigun[at]uibk.ac.at
-phone: '+4351250753456'
+email: jubril.adigun[at]student.uibk.ac.at
+phone: ''
 address:
   street: Technikerstrasse 21a
   city: Innsbruck
@@ -37,7 +37,7 @@ address:
 # coordinates:
 #   latitude: '37.4275'
 #   longitude: '-122.1697'
-directions: Room 2W04
+directions: ''
 # office_hours:
 #   - 'Monday 10:00 to 13:00'
 #   - 'Wednesday 09:00 to 10:00'
